# Dawn

./: AssetsCheck.sh  AssetsLicenceInventory.txt  Makefile.am  Makefile.in  README  btdecode.sh  configure  configure.ac  configure.in  dawn-starter.sh  errorparser.sh  reconf  settings.lua
data/: arinoxDungeonLevel1.collision.lua  arinoxDungeonLevel1.collisionmap  arinoxDungeonLevel1.environment.lua  arinoxDungeonLevel1.environmentmap  arinoxDungeonLevel1.ground.lua  arinoxDungeonLevel1.init.lua  arinoxDungeonLevel1.shadowmap  arinoxDungeonLevel1.spawnpoints  arinoxDungeonLevel1.textureshadow  arinoxDungeonLevel1.tilemap  arinoxDungeonLevel1.tiles_environment.lua  arinoxGeneralShop.collision.lua  arinoxGeneralShop.environment.lua  arinoxGeneralShop.ground.lua  arinoxGeneralShop.init.lua  arinoxGeneralShop.tiles_environment.lua  arinoxGeneralShop.tiles_ground.lua  arinoxMagesGuild.collision.lua  arinoxMagesGuild.environment.lua  arinoxMagesGuild.ground.lua  arinoxMagesGuild.init.lua  arinoxMagesGuild.tiles_environment.lua  arinoxMagesGuild.tiles_ground.lua  background_editor.tga  border.tga  circle.tga  confused.tga  current_tile_backdrop.tga  edit_backdrop.tga  fear.tga  gameinit.lua  itemdatabase.lua  lifebar.tga  loadsave.lua  mesmerized.tga  mobdata.all  quests_hexmaster.lua  quests_thesylphirantidote.lua  quests_venomousveins.lua  quests_wood.lua  (+33 more)
data/NPC/: 0.NPC
data/character/: James.tga  John.tga
data/character/link/: link1.tga  link2.tga  link3.tga  link4.tga  link5.tga  link6.tga  link7.tga
data/character/pacman/: pacman_e.tga  pacman_n.tga  pacman_ne.tga  pacman_nw.tga  pacman_s.tga  pacman_se.tga  pacman_sw.tga  pacman_w.tga
data/character/ranger/: attacking e0000.tga  attacking e0001.tga  attacking e00010.tga  attacking e00011.tga  attacking e00012.tga  attacking e0002.tga  attacking e0003.tga  attacking e0004.tga  attacking e0005.tga  attacking e0006.tga  attacking e0007.tga  attacking e0008.tga  attacking e0009.tga  attacking n0000.tga  attacking n0001.tga  attacking n00010.tga  attacking n00011.tga  attacking n00012.tga  attacking n0002.tga  attacking n0003.tga  attacking n0004.tga  attacking n0005.tga  attacking n0006.tga  attacking n0007.tga  attacking n0008.tga  attacking n0009.tga  attacking ne0000.tga  attacking ne0001.tga  attacking ne00010.tga  attacking ne00011.tga  attacking ne00012.tga  attacking ne0002.tga  attacking ne0003.tga  attacking ne0004.tga  attacking ne0005.tga  attacking ne0006.tga  attacking ne0007.tga  attacking ne0008.tga  attacking ne0009.tga  attacking nw0000.tga  (+216 more)
data/character/skeleton/: attacking e0000.tga  attacking e0001.tga  attacking e0002.tga  attacking e0003.tga  attacking e0004.tga  attacking e0005.tga  attacking e0006.tga  (+217 more)
data/cliffs/: cliff1.tga  cliff10.tga  cliff11.tga  cliff12.tga  cliff13.tga  cliff14.tga  cliff15.tga  cliff16.tga  cliff17.tga  cliff18.tga  cliff19.tga  cliff2.tga  cliff20.tga  cliff21.tga  cliff22.tga  cliff23.tga  cliff24.tga  cliff3.tga  cliff4.tga  cliff5.tga  cliff6.tga  cliff7.tga  cliff8.tga  cliff9.tga
data/cursors/: circle1_disabled.tga  circle1_enabled.tga
data/houseinterior/: armor1.tga  candle1.tga  chair1.tga  chair2.tga  chair3.tga  chest1.tga  chest2.tga  dynamictable1.tga  dynamictable10.tga  dynamictable11.tga  dynamictable12.tga  dynamictable13.tga  dynamictable14.tga  dynamictable2.tga  dynamictable3.tga  dynamictable4.tga  dynamictable5.tga  dynamictable6.tga  dynamictable7.tga  dynamictable8.tga  dynamictable9.tga  fireplace1.tga  fixedtable1.tga  fixedtable2.tga  insidewall1.tga  insidewall10.tga  insidewall11.tga  insidewall12.tga  insidewall13.tga  insidewall14.tga  insidewall15.tga  insidewall16.tga  insidewall2.tga  insidewall3.tga  insidewall4.tga  insidewall5.tga  insidewall6.tga  insidewall7.tga  insidewall8.tga  insidewall9.tga  (+19 more)
data/interaction/: shop0.tga  shop1.tga  talk.tga  talk0.tga  talk1.tga  zone0.tga  zone1.tga
data/interface/: blended_bg.tga  blended_bg1.tga  characterinfo_background.tga  inventory_base.tga  lifebar.tga  lifemana.tga  lifemana2.tga  lifemana_bottom.tga  lifemana_top.tga  manabar.tga
data/items/: Axe1.tga  Axe2.tga  Belt1.tga  Boots1.tga  Bow1.tga  Dagger1.tga  Eye1.tga  Fang1.tga  Food1.tga  Food2.tga  Food3.tga  Helmet1.tga  Meat1.tga  Meat2.tga  Mushroom1.tga  Necklace1.tga  Potion1.tga  Potion2.tga  Potion3.tga  Ring1.tga  Ring2.tga  Ring3.tga  Scroll1.tga  Skin1.tga  Spellbook1.tga  Spellbook2.tga  Sword1.tga  SwordOfKhazom.tga  Tooth1.tga  Web1.tga  coins.tga  shield.tga  shield0.tga  sword.tga
data/shadow/: light1.tga  shadow1.tga  shadow2.tga  shadow3.tga  shadow4.tga  shadow5.tga  shadow6.tga  shadow7.tga
data/stone/: stone1.tga  stone2.tga
data/tiles/: light.tga  light1.tga
data/tree/: tree1.tga  tree2.tga
data/village/: fence1.tga  fence10.tga  fence2.tga  fence3.tga  fence4.tga  fence5.tga  fence6.tga  fence7.tga  fence8.tga  fence9.tga  stairs.tga  village1.tga  village10.tga  village11.tga  village12.tga  village2.tga  village3.tga  village4.tga  village5.tga  village6.tga  village7.tga  village8.tga  village9.tga
design/: NewEditor-2010-10-18.odt
scripts/: run_tolua.bat  run_tolua.sh
src/: ActionBar.cpp  ActionBar.h  BuffWindow.cpp  BuffWindow.h  CAction.cpp  CAction.h  CCharacter.cpp  CCharacter.h  CDirection.h  CDrawingHelpers.h  CEditor.cpp  CEditor.h  CInterface.cpp  CInterface.h  CLuaFunctions.cpp  CLuaFunctions.h  CLuaInterface.h  CLuaInterface.pkg  CLuaInterfaceGenerated.cpp  CLuaInterfaceGenerated.h  CLuaTestInterface.pkg  CMagic.cpp  CMagic.h  CMessage.cpp  CMessage.h  CNPC.cpp  CNPC.h  CSpell.cpp  CSpell.h  CTexture.cpp  CTexture.h  CZone.cpp  CZone.h  CharacterInfoScreen.cpp  CharacterInfoScreen.h  ConfigurableFrame.cpp  ConfigurableFrame.h  ConfiguredFrames.cpp  ConfiguredFrames.h  ControlElement.cpp  (+152 more)
src/GLee/: GLee.cpp  GLee.h
src/pnglite/: pnglite.c  pnglite.h
src/threadObject/: EventClass.cpp  EventClass.h  MutexClass.cpp  MutexClass.h  Thread.cpp  Thread.h  makefile
tests/: README  main.aap  start_quit.lua  test_pathfinding.cpp  test_random.cpp  testsuite.cpp  testsuite.h
(+1899 files in other folders)
